Navigation on the top was added
Navigation bar, and omnifood logo was added from this commit.

--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -17,6 +17,15 @@
   </head>
 
   <body>
+    <header class="header">
+      <img
+        class="logo"
+        alt="Omnifood logo"
+        src="/content/img/omnifood-logo.png"
+      />
+      <nav class="main-nav">Navigation</nav>
+    </header>
+
     <section class="section-hero">
       <div class="hero">
         <div class="hero-text-box">
@@ -32,7 +41,7 @@
           <a href="#" class="btn btn--full margin-right-sm"
             >Start eating well</a
           >
-          <a href="#" class="btn btn--outline">Learn more &udarr;</a>
+          <a href="#" class="btn btn--outline">Learn more &darr;</a>
           <div class="delivered-meals">
             <div class="delivered-imgs">
               <img
