--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -95,5 +95,19 @@
         </div>
       </div>
     </section>
+
+    <section class="section-how container grid grid--2-cols">
+      <div>Test 1</div>
+      <div>Test 2</div>
+      <div>Test 3</div>
+      <div>Test 4</div>
+    </section>
+
+    <section class="section-how grid grid--4-cols">
+      <div>Test 1</div>
+      <div>Test 2</div>
+      <div>Test 3</div>
+      <div>Test 4</div>
+    </section>
   </body>
 </html>
