Building the how it works section 1 and 2
Did some more work to how it works sections.

Added some circles behind the iphone, using the z-index property, and using the ::before, and ::after psuedo code.

--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-
+    <link rel="stylesheet" href="/css/general.css" />
     <link rel="stylesheet" href="/css/style.css" />
 
     <title>Omnifood</title>
@@ -104,11 +104,11 @@
         </h2>
       </div>
 
-      <div class="container grid grid--2-cols">
+      <div class="container grid grid--2-cols grid--center-v">
         <!-- STEP 01 -->
         <div class="step-text-box">
           <p class="step-number">01</p>
-          <h3 class="heading">Tell us what you like (and what not)</h3>
+          <h3 class="heading-tertiary">Tell us what you like (and what not)</h3>
           <p class="step-description">
             Never again waste time thinking about what to eat! Omnifood AI will
             create a 100% personalized weekly meal plan just for you. It makes
@@ -134,7 +134,7 @@
         </div>
         <div class="step-text-box">
           <p class="step-number">02</p>
-          <h3 class="heading">Approve your weekly meal plan:</h3>
+          <h3 class="heading-tertiary"">Approve your weekly meal plan</h3>
           <p class="step-description">
             Once per week, approve the meal plan generated for you by Omnifood
             AI. You can change ingredients, swap entire meals, or even add your
@@ -146,7 +146,7 @@
 
         <div class="step-text-box">
           <p class="step-number">03</p>
-          <h3 class="heading">Receive meals at convenient time:</h3>
+          <h3 class="heading-tertiary"">Receive meals at convenient time</h3>
           <p class="step-description">
             Best chefs in town will cook your selected meal every day, and we
             will deliver it to your door whenever works best for you. You can
