Added view port on the entire header
Tried adding a view port on the entire header but took it off.

--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -17,6 +17,7 @@
   </head>
 
   <body>
+    
     <header class="header">
       <!-- Omnifood logo -->
       <img
@@ -95,7 +96,7 @@
         </div>
       </div>
     </section>
-
+</div>
     <section class="section-how">
       <div class="container">
         <span class="subheading">How it works</span>
