Added the Featured-In Section
started to add the featured in section. Added all the images, and some text element into the section.

--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -95,7 +95,21 @@
         </div>
       </div>
     </section>
+
+
+<section class="section-featured">
+  <div class="container">
+<h2 class="heading-featured-in">As featured in</h2>
+<div class="logos">
+  <img src="/content/img/logos/techcrunch.png" alt="Techcrunch Logo"/>
+  <img src="/content/img/logos/business-insider.png" alt="Techcrunch Logo"/>
+  <img src="/content/img/logos/the-new-york-times.png" alt="Techcrunch Logo"/>
+  <img src="/content/img/logos/usa-today.png" alt="Techcrunch Logo"/>
+  <img src="/content/img/logos/forbes.png" alt="Techcrunch Logo"/>
 </div>
+  </div>
+</section>
+
     <section class="section-how">
       <div class="container">
         <span class="subheading">How it works</span>
