Added the meals card section
Started working on the Meals Section today. Added some image, flex box, and ionicons.

--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -36,7 +36,7 @@
         </ul>
       </nav>
     </header>
-
+<!-- HERO SECTION -->
     <section class="section-hero">
       <div class="hero">
         <div class="hero-text-box">
@@ -97,6 +97,7 @@
     </section>
 
 
+<!-- FEATURED IN SECTION -->
 <section class="section-featured">
   <div class="container">
 <h2 class="heading-featured-in">As featured in</h2>
@@ -110,6 +111,8 @@
   </div>
 </section>
 
+
+<!-- HOW IT WORKS SECTION -->
     <section class="section-how">
       <div class="container">
         <span class="subheading">How it works</span>
@@ -117,8 +120,9 @@
           Your daily dose of health in 3 simple steps
         </h2>
       </div>
-
+<!-- Grid container -->
       <div class="container grid grid--2-cols grid--center-v">
+
         <!-- STEP 01 -->
         <div class="step-text-box">
           <p class="step-number">01</p>
@@ -176,5 +180,38 @@
         </div>
       </div>
     </section>
+    <section class="section-meals">
+      <div class="container">
+        <span class="subheading">Meals</span>
+        <h2 class="heading-secondary">
+        Omnifood AI chooses from 5,000+ recipes
+        </h2>
+      </div>
+
+    <!-- MEAL SECTION -->
+<div class="container grid grid--3-cols">
+<div class="meal">
+  <img src="/content/img/meals/meal-1.jpg" class="meal-img" alt="Image of a japanese gyoza"/>
+  <span class="tag">Vegetarian</span>
+  <p class="meal-title">Japanese Gyozas</p>
+<ul class="meal-attributes">
+  <li class="meal-attribute"><ion-icon class="meal-icon" name="flame-outline"></ion-icon><span>650 Calories</span></li>
+  <li class="meal-attribute"><ion-icon class="meal-icon" name="restaurant-outline"></ion-icon><span>NutriScore &reg; 74</span></li>
+<li class="meal-attribute"><ion-icon class="meal-icon" name="star-outline"></ion-icon><span>4.9 Rating (537)</span></li>
+
+</ul>
+
+
+</div>
+<div class="meal">Meals</div>
+<div class="list">List of diets</div>
+</div>
+
+    </section>
+
+
+    <!-- ION ICONS INJECTION LINK -->
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
