--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -181,32 +181,79 @@
       </div>
     </section>
     <section class="section-meals">
-      <div class="container">
+      <div class="container center-text">
         <span class="subheading">Meals</span>
         <h2 class="heading-secondary">
-        Omnifood AI chooses from 5,000+ recipes
+        Omnifood A.I. chooses from 5,000+ recipes
         </h2>
       </div>
 
-    <!-- MEAL SECTION -->
-<div class="container grid grid--3-cols">
+    <!-- GRID CONTAINER FOR THE MEAL SECTIONS -->
+<div class="container grid grid--3-cols margin-bottom-md">
+
+  <!-- MEAL SECTION CARD 1 -->
 <div class="meal">
   <img src="/content/img/meals/meal-1.jpg" class="meal-img" alt="Image of a japanese gyoza"/>
-  <span class="tag">Vegetarian</span>
+
+  <div class="meal-content">
+  <div class="meal-tags">
+  <span class="tag tag--vegetarian">Vegetarian</span>
+  </div>
   <p class="meal-title">Japanese Gyozas</p>
+
 <ul class="meal-attributes">
-  <li class="meal-attribute"><ion-icon class="meal-icon" name="flame-outline"></ion-icon><span>650 Calories</span></li>
-  <li class="meal-attribute"><ion-icon class="meal-icon" name="restaurant-outline"></ion-icon><span>NutriScore &reg; 74</span></li>
-<li class="meal-attribute"><ion-icon class="meal-icon" name="star-outline"></ion-icon><span>4.9 Rating (537)</span></li>
-
+  <li class="meal-attribute"><ion-icon class="meal-icon" name="flame-outline"></ion-icon><span><strong>650</strong> Calories</span></li>
+  <li class="meal-attribute"><ion-icon class="meal-icon" name="restaurant-outline"></ion-icon><span>NutriScore &reg; <strong>74</strong></span></li>
+<li class="meal-attribute"><ion-icon class="meal-icon" name="star-outline"></ion-icon><span><strong>4.9</strong> Rating (537)</span></li>
 </ul>
-
-
-</div>
-<div class="meal">Meals</div>
-<div class="list">List of diets</div>
+  </div>
 </div>
 
+
+<!-- MEAL SECTION CARD 2 -->
+
+<div class="meal">
+  <img src="/content/img/meals/meal-2.jpg" class="meal-img" alt="Image of a avocado salad"/>
+
+  <div class="meal-content">
+  <div class="meal-tags">
+  <span class="tag tag--vegan">Vegan</span>
+  <span class="tag tag--paleo">Paleo</span>
+  </div>
+  <p class="meal-title">Avocado Salad</p>
+
+<ul class="meal-attributes">
+  <li class="meal-attribute"><ion-icon class="meal-icon" name="flame-outline"></ion-icon><span><strong>400</strong> Calories</span></li>
+  <li class="meal-attribute"><ion-icon class="meal-icon" name="restaurant-outline"></ion-icon><span>NutriScore &reg; <strong>92</strong></span></li>
+<li class="meal-attribute"><ion-icon class="meal-icon" name="star-outline"></ion-icon><span><strong>4.8</strong> Rating (441)</span></li>
+</ul>
+  </div>
+</div>
+
+
+<!-- MEAL SECTION DIET LIST WITH CHECK MARK-->
+<div class="diets">
+  <h3 class="heading-tertiary">Works with any diet:</h3>
+  <ul class="list">
+   <li class="list--item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Vegetarian</span></li>
+   <li class="list--item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Vegan</span></li>
+   <li class="list--item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon> <span>Pescatarian</span></li>
+   <li class="list--item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon> <span>Gluten-free</span></li>
+   <li class="list--item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon> <span>Lactose-free</span></li>
+   <li class="list--item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Keto</span></li>
+   <li class="list--item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Paleo</span></li>
+   <li class="list--item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Low FODMAP</span></li>
+   <li class="list--item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon> <span>Kid-friendly</span></li>
+  </ul>
+</div>
+</div>
+
+
+
+<div class="container all-recipes">
+<!-- SEE ALL RECIPE LINK -->
+<a href="#" class="link">See all recipes &rarr;</a>
+</div>
     </section>
 
 
