--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -184,7 +184,7 @@
       <div class="container center-text">
         <span class="subheading">Meals</span>
         <h2 class="heading-secondary">
-        Omnifood A.I. chooses from 5,000+ recipes
+        Omnifood AI chooses from 5,000+ recipes
         </h2>
       </div>
 
@@ -248,13 +248,57 @@
 </div>
 </div>
 
-
-
 <div class="container all-recipes">
 <!-- SEE ALL RECIPE LINK -->
 <a href="#" class="link">See all recipes &rarr;</a>
 </div>
     </section>
+
+
+<!-- TESTIMONIAL SECTION -->
+
+<!-- grid container for the whole testimonial section -->
+<section class="section-testimonials grid grid--2-cols">
+
+<div class="testimonials-container">
+<span class="subheading">Testimonials</span>
+    <h2 class="heading-secondary">Once you try it, you can't go back!</h2>
+      
+
+<!-- grid container for the individual testimonials -->
+  <div class="testimonials">
+
+    <!-- figure element is used for self contained content. -->
+<figure class="testimonial">
+<img class="testimonial-img" alt="photo of customer Dave Bryson" src="/content/img/customers/dave.jpg" />
+<blockquote class="testimonial-text">Inexpensive, healthy and great-tasting meals, without even having to order manually! It feels truly magical.</blockquote>
+<p class="testimonial-name">&mdash; Dave Bryson
+</p>
+</figure>
+
+<figure class="testimonial">
+<img class="testimonial-img" alt="photo of customer Dave Bryson" src="/content/img/customers/ben.jpg" />
+<blockquote class="testimonial-text">The AI algorithm is crazy good, it chooses the right meals for me every time. It's amazing not to worry about food anymore!</blockquote>
+<p class="testimonial-name">&mdash; Ben Hadley
+</p>
+</figure>
+  <figure class="testimonial">
+<img class="testimonial-img" alt="photo of customer Dave Bryson" src="/content/img/customers/steve.jpg" />
+<blockquote class="testimonial-text">Omnifood is a life saver! I just started a company, so there's no time for cooking. I couldn't live without my daily meals now!</blockquote>
+<p class="testimonial-name">&mdash; Steve Miller
+</p>
+</figure>
+<figure class="testimonial">
+<img class="testimonial-img" alt="photo of customer Dave Bryson" src="/content/img/customers/hannah.jpg" />
+<blockquote class="testimonial-text">I got Omnifood for the whole family, and it frees up so much time! Plus, everything is organic and vegan and without plastic. </blockquote>
+<p class="testimonial-name">&mdash; Hannah Smith
+</p>
+</figure>
+  </div>
+  </div>    
+  <div class="gallery">Gallery</div>
+</section>
+
 
 
     <!-- ION ICONS INJECTION LINK -->
