--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -258,7 +258,7 @@
 <!-- TESTIMONIAL SECTION -->
 
 <!-- grid container for the whole testimonial section -->
-<section class="section-testimonials grid grid--2-cols">
+<section class="section-testimonials">
 
 <div class="testimonials-container">
 <span class="subheading">Testimonials</span>
@@ -348,6 +348,80 @@
   </div>
 </section>
 
+
+
+<!-- PRICING CARDS SECTION -->
+
+<section class="section-pricing">
+  <div class="container">
+        <span class="subheading">Pricing</span>
+        <h2 class="heading-secondary">
+        Eating well without breaking the bank
+        </h2>
+      </div>
+<!-- Grid container for the meal cards -->
+<div class="container grid grid--2-cols">
+
+
+<!-- Meal card #1 -->
+<div class="pricing-plan pricing-plan--starter">
+  <header class="plan-header">
+  <p class="plan-name">Starter</p>
+<p class="plan-price"><span>$</span>399</p>
+<p class="plan-text">per month. That's just $13 per meal!</p>
+  </header>
+<ul class="list">
+   <li class="list--item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>1 meal per day</span></li>
+</ul>
+<ul class="list">
+   <li class="list--item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Order from 11am and 9pm</span></li>
+</ul>
+<ul class="list">
+   <li class="list--item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Delivery is free</span></li>
+</ul>
+<ul class="list">
+   <li class="list--item"><ion-icon class="list-icon" name="close-outline"></ion-icon><span></span></li>
+</ul>
+<div class="plan-sign-up">
+ <a href="#" class="btn btn--full">Start eating well</a>
+</div>
+
+
+</div>
+
+<!-- Meal card #2 -->
+<div class="pricing-plan pricing-plan--complete">
+   <header class="plan-header">
+  <p class="plan-name">Complete</p>
+<p class="plan-price"><span>$</span>649</p>
+<p class="plan-text">per month. That's just $11 per meal!</p>
+   </header>
+<ul class="list">
+   <li class="list--item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span><strong>2 meals</strong> per day</span></li>
+</ul>
+<ul class="list">
+   <li class="list--item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Order <strong>24/7</strong></span></li>
+</ul>
+<ul class="list">
+   <li class="list--item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Delivery is free</span></li>
+</ul>
+<ul class="list">
+   <li class="list--item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Get access to the latest recipes</span></li>
+</ul>
+<div class="plan-sign-up">
+ <a href="#" class="btn btn--full">Start eating well</a>
+</div>
+</div>
+</div>
+
+<div class="container grid grid--4-cols">
+<div class="feature">Feature 1</div>
+<div class="feature">Feature 2</div>
+<div class="feature">Feature 3</div>
+<div class="feature">Feature 4</div>
+</div>
+
+</section>
 
 
     <!-- ION ICONS INJECTION LINK -->
