--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -19,6 +19,7 @@
   <body>
     <header class="header">
       <!-- Omnifood logo -->
+      <a href="#">
       <img
         class="logo"
         alt="Omnifood logo"
@@ -37,6 +38,7 @@
       </nav>
     </header>
 <!-- HERO SECTION -->
+<main>
     <section class="section-hero">
       <div class="hero">
         <div class="hero-text-box">
@@ -360,7 +362,7 @@
         </h2>
       </div>
 <!-- Grid container for the meal cards -->
-<div class="container grid grid--2-cols">
+<div class="container grid grid--2-cols margin-bottom-md">
 
 
 <!-- Meal card #1 -->
@@ -414,14 +416,114 @@
 </div>
 </div>
 
-<div class="container grid grid--4-cols">
-<div class="feature">Feature 1</div>
-<div class="feature">Feature 2</div>
-<div class="feature">Feature 3</div>
-<div class="feature">Feature 4</div>
+
+
+<!-- PRICE PLAN DETAIL -->
+<div class="container grid">
+<aside class="plan-details">Prices include all applicable taxes.You can cancel at any time. Both plans include the following:</aside>
 </div>
 
+
+
+
+<!-- FEATURES SECTION -->
+
+<div class="container grid grid--4-cols">
+<div class="feature">
+  <ion-icon class="feature-icon" name="infinite-outline"></ion-icon>
+  <p class="feature-title">Never cook again!</p>
+  <p class="feature-text"> Our subscriptions cover 365 days per year, even including major holidays.</p>
+</div>
+
+<div class="feature">
+  <ion-icon class="feature-icon" name="nutrition-outline"></ion-icon>
+  <p class="feature-title">Local and organic</p>
+  <p class="feature-text"> Our cooks only use local, fresh, and organic products to prepare your meals.</p>
+</div>
+
+<div class="feature">
+  <ion-icon class="feature-icon" name="leaf-outline"></ion-icon>
+  <p class="feature-title">No waste</p>
+  <p class="feature-text"> All our partners only use reusable containers to package all your meals.</p>
+</div>
+
+<div class="feature">
+  <ion-icon class="feature-icon" name="pause-outline"></ion-icon>
+  <p class="feature-title">Pause anytime</p>
+  <p class="feature-text">Going on vacation? Just pause your subscription, and we refund unused days.</p>
+</div>
+</div>
 </section>
+
+
+
+
+<!-- CALL TO ACTION BOX SECTION -->
+<section class="section-cta">
+  <div class="container">
+    <div class="cta">
+    <div class="cta-text-box">
+     <h2 class="heading-secondary">Get your first meal for FREE!</h2>
+     <p class="cta-text">Healthy, tasty and hassle-free meals are waiting for you. Start eating well today. You can cancel or pause anytime. And the first meal is on us!</p>
+     <!-- input boxes for user to sign up. *required* gives a user an error if they do not fill up the box-->
+<form class="cta-form" action="#">
+  <!-- name input box -->
+  <div>
+  <label for="full-name">Full Name</label>
+  <input id="full-name" type="text" placeholder="First and last name" required/>
+  </div>
+  <!-- email input box -->
+  <div>
+  <label for="email">Email Address</label>
+  <input id="email" type="email" placeholder="youremail@example.com" required/>
+</div>
+<!-- where did you hear from us selection tab.  -->
+<div>
+  <label for="select-where">Where did you hear from us?</label>
+<select id="select-where" required>
+  <option value="">Please choose one</option>
+  <option value="Friends">Friends and family</option>
+  <option value="Podcast">Podcast</option>
+  <option value="Facebook Ads">Facebook Ads</option>
+  <option value="Others">Others</option>
+</select>
+</div>
+<!-- sign up now button -->
+  <button class="btn btn--form">Sign up now</button>
+
+
+
+
+
+</form>
+    </div>
+    <div class="cta-img-box" role="img" aria-label="Woman enjoying food"></div>
+    </div>
+  </div>
+</section>
+</main>
+
+
+
+<!-- FOOTER SECTION -->
+<footer class="footer">
+  <div class="container grid grid--5-cols">
+    <div class="logo-col">
+      <a href="#" class="footer-logo">
+      <img
+        class="logo"
+        alt="Omnifood logo"
+        src="/content/img/omnifood-logo.png"
+      /></a>
+    </div>
+    <div class="address-col">Address</div>
+    <nav class="nav-col">Nav 1</nav>
+    <nav class="nav-col">Nav 2</nav>
+    <nav class="nav-col">Nav 3</nav>
+  </div>
+</footer>
+
+
 
 
     <!-- ION ICONS INJECTION LINK -->
