trial on the footer section
tried adding the address on the footer.

--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -37,6 +37,9 @@
         </ul>
       </nav>
     </header>
+
+
+
 <!-- HERO SECTION -->
 <main>
     <section class="section-hero">
@@ -50,11 +53,13 @@
             healthy again. Tailored to your personal tastes and nutritional
             needs.
           </p>
-
+<!-- Hero section links. Start eating well, and learn more -->
           <a href="#" class="btn btn--full margin-right-sm"
             >Start eating well</a
           >
           <a href="#" class="btn btn--outline">Learn more &darr;</a>
+
+<!-- circular images of the customer with the omnifood description -->
           <div class="delivered-meals">
             <div class="delivered-imgs">
               <img
@@ -88,6 +93,7 @@
           </div>
         </div>
 
+        <!-- Images on the side of the hero section -->
         <div class="hero-img-box">
           <img
             src="/content/img/hero.png"
@@ -271,81 +277,83 @@
   <div class="testimonials">
 
     <!-- figure element is used for self contained content. -->
+<!-- Customer testimonials -->
 <figure class="testimonial">
 <img class="testimonial-img" alt="photo of customer Dave Bryson" src="/content/img/customers/dave.jpg" />
 <blockquote class="testimonial-text">Inexpensive, healthy and great-tasting meals, without even having to order manually! It feels truly magical.</blockquote>
 <p class="testimonial-name">&mdash; Dave Bryson
 </p>
 </figure>
-
 <figure class="testimonial">
-<img class="testimonial-img" alt="photo of customer Dave Bryson" src="/content/img/customers/ben.jpg" />
+<img class="testimonial-img" alt="photo of customer Ben Hadley" src="/content/img/customers/ben.jpg" />
 <blockquote class="testimonial-text">The AI algorithm is crazy good, it chooses the right meals for me every time. It's amazing not to worry about food anymore!</blockquote>
 <p class="testimonial-name">&mdash; Ben Hadley
 </p>
 </figure>
   <figure class="testimonial">
-<img class="testimonial-img" alt="photo of customer Dave Bryson" src="/content/img/customers/steve.jpg" />
+<img class="testimonial-img" alt="photo of customer Steve Miller" src="/content/img/customers/steve.jpg" />
 <blockquote class="testimonial-text">Omnifood is a life saver! I just started a company, so there's no time for cooking. I couldn't live without my daily meals now!</blockquote>
 <p class="testimonial-name">&mdash; Steve Miller
 </p>
 </figure>
 <figure class="testimonial">
-<img class="testimonial-img" alt="photo of customer Dave Bryson" src="/content/img/customers/hannah.jpg" />
+<img class="testimonial-img" alt="photo of customer Hannah Smith" src="/content/img/customers/hannah.jpg" />
 <blockquote class="testimonial-text">I got Omnifood for the whole family, and it frees up so much time! Plus, everything is organic and vegan and without plastic. </blockquote>
 <p class="testimonial-name">&mdash; Hannah Smith
 </p>
 </figure>
   </div>
-  </div>    
+  </div>   
+  
+  <!-- Food images on the side of the customer testimonials. Total of 12 images -->
   <div class="gallery">
 <figure class="gallery-item">
   <img src="/content/img/gallery/gallery-1.jpg" alt="Photo of beautifully arranged food"/>
-  <!-- <figcaption>Caption</figcaption> -->
+  
 </figure>
 <figure class="gallery-item">
   <img src="/content/img/gallery/gallery-2.jpg" alt="Photo of beautifully arranged food"/>
-  <!-- <figcaption>Caption</figcaption> -->
+  
 </figure>
 <figure class="gallery-item">
   <img src="/content/img/gallery/gallery-3.jpg" alt="Photo of beautifully arranged food"/>
-  <!-- <figcaption>Caption</figcaption> -->
+ 
 </figure>
 <figure class="gallery-item">
   <img src="/content/img/gallery/gallery-4.jpg" alt="Photo of beautifully arranged food"/>
-  <!-- <figcaption>Caption</figcaption> -->
+  
 </figure>
 <figure class="gallery-item">
   <img src="/content/img/gallery/gallery-5.jpg" alt="Photo of beautifully arranged food"/>
-  <!-- <figcaption>Caption</figcaption> -->
+ 
 </figure>
 <figure class="gallery-item">
   <img src="/content/img/gallery/gallery-6.jpg" alt="Photo of beautifully arranged food"/>
-  <!-- <figcaption>Caption</figcaption> -->
+  
 </figure>
 <figure class="gallery-item">
   <img src="/content/img/gallery/gallery-7.jpg" alt="Photo of beautifully arranged food"/>
-  <!-- <figcaption>Caption</figcaption> -->
+  
 </figure>
 <figure class="gallery-item">
   <img src="/content/img/gallery/gallery-8.jpg" alt="Photo of beautifully arranged food"/>
-  <!-- <figcaption>Caption</figcaption> -->
+ 
 </figure>
 <figure class="gallery-item">
   <img src="/content/img/gallery/gallery-9.jpg" alt="Photo of beautifully arranged food"/>
-  <!-- <figcaption>Caption</figcaption> -->
+  <
 </figure>
 <figure class="gallery-item">
   <img src="/content/img/gallery/gallery-10.jpg" alt="Photo of beautifully arranged food"/>
-  <!-- <figcaption>Caption</figcaption> -->
+  
 </figure>
 <figure class="gallery-item">
   <img src="/content/img/gallery/gallery-11.jpg" alt="Photo of beautifully arranged food"/>
-  <!-- <figcaption>Caption</figcaption> -->
+ 
 </figure>
 <figure class="gallery-item">
   <img src="/content/img/gallery/gallery-12.jpg" alt="Photo of beautifully arranged food"/>
-  <!-- <figcaption>Caption</figcaption> -->
+  
 </figure>
   </div>
 </section>
@@ -420,7 +428,7 @@
 
 <!-- PRICE PLAN DETAIL -->
 <div class="container grid">
-<aside class="plan-details">Prices include all applicable taxes.You can cancel at any time. Both plans include the following:</aside>
+<aside class="plan-details">Prices include all applicable taxes.You can cancel at any time. Both plans include the following</aside>
 </div>
 
 
@@ -491,10 +499,6 @@
 <!-- sign up now button -->
   <button class="btn btn--form">Sign up now</button>
 
-
-
-
-
 </form>
     </div>
     <div class="cta-img-box" role="img" aria-label="Woman enjoying food"></div>
@@ -516,7 +520,6 @@
         src="/content/img/omnifood-logo.png"
       /></a>
     </div>
-    <div class="address-col">Address</div>
     <nav class="nav-col">Nav 1</nav>
     <nav class="nav-col">Nav 2</nav>
     <nav class="nav-col">Nav 3</nav>
