added into the footer
added the copyright information

--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -519,7 +519,10 @@
         alt="Omnifood logo"
         src="/content/img/omnifood-logo.png"
       /></a>
+<p class="copyright">Copyright &copy; 2027 by Omnifood Inc. All rights reserved.</p>
+
     </div>
+    <div class="address-col">Adress</div>
     <nav class="nav-col">Nav 1</nav>
     <nav class="nav-col">Nav 2</nav>
     <nav class="nav-col">Nav 3</nav>
