--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -520,9 +520,17 @@
         src="/content/img/omnifood-logo.png"
       /></a>
 <p class="copyright">Copyright &copy; 2027 by Omnifood Inc. All rights reserved.</p>
-
     </div>
-    <div class="address-col">Adress</div>
+    <div class="address-col">
+      <p class="footer-heading">Contact Us</p>
+      <address class="contacts">
+     <p>623 Harrison St., 2nd Floor, San Francisco, CA 94107</p>
+<p>
+  <a href="tel:415-201-6370">415-201-6370</a>
+  <a href="mailto:hello@omnifood.com">hello@omnifood.com</a>
+</p>
+     </address>
+    </div>
     <nav class="nav-col">Nav 1</nav>
     <nav class="nav-col">Nav 2</nav>
     <nav class="nav-col">Nav 3</nav>
