finished media query for mobile
Added a box for when the user click the menu option when in a mobile device to show the navigation tab. Added some animation for the navigation menu once its pressed by the user.

--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-    <header class="header">
+    <header class="header nav-open">
       <!-- Omnifood logo -->
       <a href="#">
       <img
@@ -39,6 +39,7 @@
         </ul>
       </nav>
 
+      <!-- Mobile media query buttons. This will only show when the screen size is smaller. -->
       <button class="btn-mobile-nav">
         <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
         <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
