Media query for 740px below
Worked on the diet section: center the diet section when the screen breaks below 740 px.

--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-    <header class="header nav-open">
+    <header class="header">
       <!-- Omnifood logo -->
       <a href="#">
       <img
