--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -15,6 +15,9 @@
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/queries.css" />
 
+
+    <script defer src="/js/script.js"></script>
+
     <title>Omnifood</title>
   </head>
 
