--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -540,7 +540,7 @@
   <li><a class="footer-link" href="#"><ion-icon class="social-icon" name="logo-twitter"></ion-icon></a></li>
 </ul>
 <!-- Copyright section -->
-<p class="copyright">Copyright &copy; 2027 by Omnifood, Inc. All rights reserved.</p>
+<p class="copyright">Copyright &copy; <span class="year">2027</span> by Omnifood, Inc. All rights reserved.</p>
     </div>
 
     <!-- Address Column -->
