--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="/css/queries.css" />
 
 
+<script defer src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
+
     <script defer src="/js/script.js"></script>
 
     <title>Omnifood</title>
@@ -34,10 +36,10 @@
       <!-- Navigation links -->
       <nav class="main-nav">
         <ul class="main-nav-list">
-          <li><a class="main-nav-link" href="#">How it works</a></li>
-          <li><a class="main-nav-link" href="#">Meals</a></li>
-          <li><a class="main-nav-link" href="#">Testimonials</a></li>
-          <li><a class="main-nav-link" href="#">Pricing</a></li>
+          <li><a class="main-nav-link" href="#how">How it works</a></li>
+          <li><a class="main-nav-link" href="#meals">Meals</a></li>
+          <li><a class="main-nav-link" href="#testimonials">Testimonials</a></li>
+          <li><a class="main-nav-link" href="#pricing">Pricing</a></li>
           <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
         </ul>
       </nav>
@@ -65,10 +67,10 @@
             needs.
           </p>
 <!-- Hero section links. Start eating well, and learn more -->
-          <a href="#" class="btn btn--full margin-right-sm"
+          <a href="#cta" class="btn btn--full margin-right-sm"
             >Start eating well</a
           >
-          <a href="#" class="btn btn--outline">Learn more &darr;</a>
+          <a href="#how" class="btn btn--outline">Learn more &darr;</a>
 
 <!-- circular images of the customer with the omnifood description -->
           <div class="delivered-meals">
@@ -132,7 +134,7 @@
 
 
 <!-- HOW IT WORKS SECTION -->
-    <section class="section-how">
+    <section class="section-how" id="how">
       <div class="container">
         <span class="subheading">How it works</span>
         <h2 class="heading-secondary">
@@ -199,7 +201,9 @@
         </div>
       </div>
     </section>
-    <section class="section-meals">
+
+    <!-- MEALS -->
+    <section class="section-meals" id="meals">
       <div class="container center-text">
         <span class="subheading">Meals</span>
         <h2 class="heading-secondary">
@@ -279,7 +283,7 @@
 <!-- TESTIMONIAL SECTION -->
 
 <!-- grid container for the whole testimonial section -->
-<section class="section-testimonials">
+<section class="section-testimonials" id="testimonials">
 
 <div class="testimonials-container">
 <span class="subheading">Testimonials</span>
@@ -375,7 +379,7 @@
 
 <!-- PRICING CARDS SECTION -->
 
-<section class="section-pricing">
+<section class="section-pricing" id="pricing">
   <div class="container">
         <span class="subheading">Pricing</span>
         <h2 class="heading-secondary">
@@ -480,7 +484,7 @@
 
 
 <!-- CALL TO ACTION BOX SECTION -->
-<section class="section-cta">
+<section class="section-cta" id="cta">
   <div class="container">
     <div class="cta">
     <div class="cta-text-box">
