--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -6,6 +6,11 @@
     <meta name="description" content="Omnifood is an AI-powered food subscription that will make you eat healthy again, 365 days per year. It's tailored to your personal tastes and nutritional needs" />
     <!-- Always include this line of code for responsive web design -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+<link rel="icon" href="./content/img/favicon.png"/>
+<link rel="apple-touch-icon" href="./content/img/favicon.png" />
+<link rel="manifest" href="manifest.webmanifest" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
