--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -497,21 +497,23 @@
      <h2 class="heading-secondary">Get your first meal for FREE!</h2>
      <p class="cta-text">Healthy, tasty and hassle-free meals are waiting for you. Start eating well today. You can cancel or pause anytime. And the first meal is on us!</p>
      <!-- input boxes for user to sign up. *required* gives a user an error if they do not fill up the box-->
-<form class="cta-form" action="#">
+<form class="cta-form" action="sign-up" netlify>
   <!-- name input box -->
   <div>
   <label for="full-name">Full Name</label>
-  <input id="full-name" type="text" placeholder="First and last name" required/>
+  <input id="full-name" type="text" placeholder="First and last name" 
+  name="full-name"
+  required/>
   </div>
   <!-- email input box -->
   <div>
   <label for="email">Email Address</label>
-  <input id="email" type="email" placeholder="youremail@example.com" required/>
+  <input id="email" type="email" placeholder="youremail@example.com" name="email" required/>
 </div>
 <!-- where did you hear from us selection tab.  -->
 <div>
   <label for="select-where">Where did you hear from us?</label>
-<select id="select-where" required>
+<select id="select-where" name="select-where" required>
   <option value="">Please choose one</option>
   <option value="Friends">Friends and family</option>
   <option value="Podcast">Podcast</option>
