Added netlify form

--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -497,7 +497,7 @@
      <h2 class="heading-secondary">Get your first meal for FREE!</h2>
      <p class="cta-text">Healthy, tasty and hassle-free meals are waiting for you. Start eating well today. You can cancel or pause anytime. And the first meal is on us!</p>
      <!-- input boxes for user to sign up. *required* gives a user an error if they do not fill up the box-->
-<form class="cta-form" action="sign-up" netlify>
+<form class="cta-form" action="sign-up" name="sign-up" netlify>
   <!-- name input box -->
   <div>
   <label for="full-name">Full Name</label>
